# adel

./: .hgignore
cmake/: CMakeLists.txt  pch.cmake
cmake/app/entry/: CMakeLists.txt
cmake/include/: FindHunSpell.cmake  FindLog4cplus.cmake  FindPostgreSQL.cmake
cmake/lib/: CMakeLists.txt
cmake/lib/adel/: CMakeLists.txt
cmake/lib/async/: CMakeLists.txt  FindValgrind.cmake
cmake/lib/core/: CMakeLists.txt
cmake/lib/htmlcxx/: CMakeLists.txt  FindIconv.cmake
cmake/lib/http/: CMakeLists.txt
cmake/lib/net/: CMakeLists.txt
cmake/lib/pgc/: CMakeLists.txt
cmake/lib/scom/: CMakeLists.txt
cmake/lib/spider/: CMakeLists.txt  FindHunSpell.cmake
cmake/lib/sqlitepp/: CMakeLists.txt
cmake/lib/utf8proc/: CMakeLists.txt
cmake/lib/utils/: CMakeLists.txt
etc/: default.hfs  global.conf
include/adel/: log.hpp  manager.hpp
include/async/: asioBridge.hpp  event.hpp  eventWaiter.hpp  exception.hpp  freeFunctions.hpp  future.hpp  log.hpp  manager.hpp  mutex.hpp  service.hpp
include/core/: log.hpp  manager.hpp
include/htmlcxx/html/: CharsetConverter.h  ParserSax.tcc  Uri.h
include/http/: client.hpp  connection.hpp  contentEncoding.hpp  error.hpp  headerName.hpp  headerValue.hpp  inputMessage.hpp  log.hpp  method.hpp  outputMessage.hpp  server.hpp  statusCode.hpp  transferEncoding.hpp  version.hpp
include/http/client/: log.hpp  request.hpp  response.hpp
include/http/impl/: headerName.hpp
include/http/server/: handlerFs.hpp  log.hpp  request.hpp  response.hpp
include/net/: acceptor.hpp  channel.hpp  connector.hpp  log.hpp  message.hpp  packet.hpp
include/net/http/: connection.hpp  contentEncoding.hpp  headerName.hpp  headerValue.hpp  inputMessage.hpp  message.hpp  messageIn.hpp  messageIterator.hpp  messageOut.hpp  method.hpp  outputMessage.hpp  server.hpp  statusCode.hpp  transferEncoding.hpp  version.hpp
include/net/http/impl/: headerName.hpp
include/net/http/server/: handlerFs.hpp  log.hpp  request.hpp  response.hpp
include/pgc/: connection.hpp  db.hpp  log.hpp  result.hpp  statement.hpp
include/scom/: log.hpp  service.hpp
include/spider/: log.hpp  manager.hpp  service.hpp  url.hpp
include/sqlitepp/: converters.hpp  exception.hpp  query.hpp  session.hpp  statement.hpp  string.hpp
include/utf8proc/: utf8proc.h
include/utils/: fixEndian.hpp  htmlEntities.hpp  implAccess.hpp  julian.hpp  leakedObject.hpp  logInitializer.hpp  logTemplate.hpp  options.hpp  variant.hpp
src/adel/: manager.cpp
src/async/: event.cpp  freeFunctions.cpp  manager.cpp  mutex.cpp  pch.hpp  service.cpp
src/async/impl/: event.cpp  event.hpp  fiber.cpp  fiber.hpp  fiberPool.hpp  fiberRoot.cpp  fiberRoot.hpp  mutex.cpp  mutex.hpp  service.cpp  service.hpp  threadLocalStorage.hpp  worker.cpp  worker.hpp
src/core/: manager.cpp
src/entry/: main.cpp
src/htmlcxx/html/: CharsetConverter.cc  Node.cc  Uri.cc  utils.cc
src/http/: client.cpp  headerValue_generators.cpp  headerValue_parsers.cpp  inputMessage.cpp  outputMessage.cpp  pch.hpp  server.cpp  statusCode.cpp
src/http/client/: request.cpp  response.cpp
src/http/client/impl/: request.cpp  request.hpp  response.cpp  response.hpp
src/http/impl/: bodyExtractor.cpp  bodyExtractor.hpp  bodyExtractorChunked.cpp  bodyExtractorChunked.hpp  bodyExtractorSized.cpp  bodyExtractorSized.hpp  bodyExtractorUntilClose.cpp  bodyExtractorUntilClose.hpp  client.cpp  client.hpp  contentDecoder.cpp  contentDecoder.hpp  contentDecoderAccumuler.cpp  contentDecoderAccumuler.hpp  contentDecoderChunked.cpp  contentDecoderChunked.hpp  contentDecoderZlib.cpp  contentDecoderZlib.hpp  contentEncoder.cpp  contentEncoder.hpp  contentEncoderChunked.cpp  contentEncoderChunked.hpp  contentEncoderWriter.cpp  contentEncoderWriter.hpp  contentEncoderZlib.cpp  contentEncoderZlib.hpp  contentFilter.cpp  contentFilter.hpp  contentFilterBufferAccumuler.cpp  contentFilterBufferAccumuler.hpp  contentFilterChannelWriter.cpp  contentFilterChannelWriter.hpp  contentFilterDecodeChunked.cpp  contentFilterDecodeChunked.hpp  contentFilterDecodeZlib.cpp  contentFilterDecodeZlib.hpp  contentFilterEncodeChunked.cpp  contentFilterEncodeChunked.hpp  contentFilterEncodeZlib.cpp  contentFilterEncodeZlib.hpp  (+8 more)
src/http/server/: handlerFs.cpp  request.cpp  response.cpp
src/http/server/impl/: handlerFs.cpp  request.cpp  (+4 more)
src/net/: acceptor.cpp  channel.cpp  connector.cpp  message.cpp  pch.hpp
src/net/http/: headerValue_generators.cpp  headerValue_parsers.cpp  inputMessage.cpp  message.cpp  messageIn.cpp  messageIterator.cpp  messageOut.cpp  outputMessage.cpp  server.cpp  statusCode.cpp
src/net/impl/: acceptor.cpp  acceptor.hpp  channel.cpp  channel.hpp  connector.cpp  connector.hpp  message.cpp  message.hpp
src/pgc/: connection.cpp  db.cpp  pch.hpp  result.cpp  statement.cpp
src/pgc/impl/: bindData.cpp  bindData.hpp  connection.cpp  connection.hpp  connectionHolder.cpp  connectionHolder.hpp  db.cpp  db.hpp  result.cpp  result.hpp  statement.cpp  statement.hpp
src/scom/: db.sql  pch.hpp  service.cpp
src/scom/impl/: pageRuleApplyer.cpp  pageRuleApplyer.hpp  pageRuleApplyersContainer.cpp  pageRuleApplyersContainer.hpp  phrase.cpp  phrase.hpp  phraseStreamer.cpp  phraseStreamer.hpp  reportGenerator.cpp  reportGenerator.hpp  service.cpp  service.hpp  textParser.cpp  textParser.hpp  word.cpp  word.hpp  wordBucket.cpp  wordBucket.hpp  workerRaii.hpp
src/spider/: db.sql  dream.hpp  manager.cpp  pch.hpp  phrase.cpp  phrase.hpp  phraseStreamer.cpp  phraseStreamer.hpp  service.cpp  spider.backup  textParser.cpp  textParser.hpp  url.cpp  word.cpp  word.hpp  wordBucket.cpp  wordBucket.hpp
src/sqlitepp/: binders.cpp  exception.cpp  query.cpp  session.cpp  statement.cpp  string.cpp  transaction.cpp
src/utf8proc/: utf8proc.cpp
src/utils/: htmlEntities.cpp  logInitializer.cpp  options.cpp  pch.hpp  showVariantConvertMatrix.cpp  variant.cpp  variantConvertMatrix.hpp  variantDumper.hpp  variantImpl.hpp  variantLoad.cpp  variantLoadGrammar.cpp  variantLoadScope.cpp  variantLoadScope.hpp  variantSerialization.cpp
tmp/searcher/: CMakeLists.txt  main.cpp  t1.html  t2.html
(+41 files in other folders)
